# photoBatch

./: .gitignore  ArgumentParser.cpp  ArgumentParser.h  ArgumentParser.hpp  CMakeLists.txt  ConvertMode.cpp  ConvertMode.h  Mode.cpp  Mode.h  PhotoBatch.cpp  README.md  RenameMode.cpp  RenameMode.h  ResizeMode.cpp  ResizeMode.h  ScaleMode.cpp  ScaleMode.h  Utils.cpp  Utils.h  Utils.hpp
Unittests/: CMakeLists.txt  TestArgumentParser.cpp
libs/shared_dynamic_lib/: Audio.h  Calculator.cpp  Display.cpp  Display.h  DisplayAudio.exp  DisplayAudio.lib  Dynamyc_calculator.cpp
libs/shared_lib/: Audio.cpp  Audio.h  Calculator.cpp  Display.cpp  Display.exp  Display.h  Display.lib  DisplayAudio.exp  DisplayAudio.lib
libs/static_lib/: Audio.cpp  Calculator.cpp  Display.cpp  DisplayAudio.lib
